kubernetes/home/ms-sso/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oauth-proxy
  namespace: ms-sso
spec:
  replicas: 1
  selector:
    matchLabels:
      app: oauth-proxy
  template:
    metadata:
      labels:
        app: oauth-proxy
    spec:
      containers:
      - name: oauth-proxy
        image: quay.io/oauth2-proxy/oauth2-proxy:v7.2.0
        ports:
        - containerPort: 4180
        args:
        - --http-address=0.0.0.0:4180
        - --redirect-url=https://auth.opryga.com/oauth2/callback
        - --reverse-proxy=true
        - --errors-to-info-log=true
        - --whitelist-domain=opryga.com
        - --whitelist-domain=oplabs.us
        - --cookie-secure=true
        - --cookie-domain=opryga.com
        - --cookie-domain=oplabs.us
        - --pass-access-token=true
        - --pass-authorization-header=true
        - --force-https=true
        # Enable all the logs
        - --standard-logging=true
        - --auth-logging=true
        - --request-logging=true
        - --set-xauthrequest=true
        # Testin some things out
        - --upstream=static://202
