kubernetes/home/ms-sso/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefikauth
  namespace: ms-sso
spec:
  ports:
    - name: http
      protocol: TCP
      port: 4180
      targetPort: 4180
  selector:
    app: containous
    task: traefikauth
