kubernetes/home/ms-sso/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: oauth-proxy
  namespace: ms-sso
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure # or websecure for HTTPS
  routes:
  - match: Host(`auth.opryga.com`) # Replace with your domain
    kind: Rule
    services:
    - name: oauth-proxy
      port: 4180
  # Uncomment and configure for HTTPS
  tls:
    secretName: auth-opryga-com-tls
